--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trello-client",
-  "version": "0.1.0-SNAPSHOT",
+  "version": "0.0.1",
   "author": "Newsroom Team",
   "description": "Telegraph Trello Client API",
   "main": "./lib/trello.js",
@@ -30,7 +30,8 @@
   "scripts": {
     "clean": "rm -rf node_modules dist",
     "test": "istanbul cover --config ./spec/support/.istanbul.yml node_modules/jasmine/bin/jasmine.js",
-    "pack": "npm pack; mkdir -p dist; mv trello-client*.tgz dist/."
+    "pack": "npm pack; mkdir -p dist; mv trello-client*.tgz dist/.",
+    "docs:build": "jsdoc lib/*.js -d ./jsdoc"
   },
   "dependencies": {
     "lodash": "4.17.4",
@@ -40,6 +41,8 @@
     "istanbul": "0.4.5",
     "jasmine": "2.8.0",
     "jasmine-console-reporter": "2.0.1",
+    "jsdoc": "^3.5.5",
+    "jsdock": "^1.0.4",
     "proxyquire": "1.8.0"
   }
 }
