--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ node_js: '8'
 jobs:
   include:
   - stage: test and docs
-    script: npm test && npm docs
+    script: npm test
+  - script: npm docs
   - stage: npm release
     script: echo "Deploying to npm ..."
     deploy:
