--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "jsdoc": "^3.5.5",
     "jsdoc-to-markdown": "^3.0.3",
     "jsdock": "^1.0.4",
-    "proxyquire": "1.8.0"
+    "proxyquire": "1.8.0",
+    "sinon": "^4.1.3"
   },
   "directories": {
     "lib": "lib"
