--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@telegraph-engineering/trello-client",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "author": "Newsroom Team",
   "description": "Telegraph Trello Client API",
   "main": "./lib/trello.js",
@@ -45,8 +45,7 @@
     "jsdoc": "^3.5.5",
     "jsdoc-to-markdown": "^3.0.3",
     "jsdock": "^1.0.4",
-    "proxyquire": "1.8.0",
-    "sinon": "^4.1.3"
+    "proxyquire": "1.8.0"
   },
   "directories": {
     "lib": "lib"
