--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@telegraph-engineering/trello-client",
-  "version": "0.0.15",
-  "author": "Newsroom Team",
+  "version": "0.0.16",
+  "author": "TMG Newsroom Team",
   "description": "Telegraph Trello Client API",
   "main": "./lib/trello.js",
   "files": [
