--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js: '8'
 jobs:
   include:
   - stage: test and docs
-    script: npm codacyCoverage
+    script: npm run codacyCoverage
   - script: npm docs
   - stage: npm release
     script: echo "Deploying to npm ..."
