Line 2.x.x initial commit

--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
   "name": "@telegraph-engineering/trello-client",
-  "version": "1.1.0",
   "author": "TMG Newsroom Team",
   "description": "Telegraph Trello Client API",
-  "main": "./lib/trello.js",
-  "files": [
-    "lib"
-  ],
+  "main": "lib/trello.js",
   "keywords": [
-    "Telegraph Media Group",
-    "Trello Client API"
-  ],
-  "tags": [
-    "Telegraph Media Group",
-    "Trello Client API"
+    "trello"
   ],
   "homepage": "https://github.com/telegraph/trello-client",
   "repository": {
@@ -23,34 +14,36 @@
   "bugs": {
     "url": "https://github.com/telegraph/trello-client/issues"
   },
-  "engines": {
-    "node": ">=6.0.0"
-  },
   "license": "Apache-2.0",
   "scripts": {
-    "clean": "rm -rf node_modules dist",
-    "test": "istanbul cover --config ./spec/support/.istanbul.yml node_modules/jasmine/bin/jasmine.js",
-    "codacyCoverage": "npm test && cat ./dist/coverage/lcov.info | codacy-coverage",
-    "pack": "npm pack; mkdir -p dist; mv trello-client*.tgz dist/.",
-    "docs": "jsdoc2md lib/*.js --param-list-format list > api.md",
-    "htmlDocs": "jsdoc lib/*.js -d ./jsdoc"
+    "build": "gulp build",
+    "clean": "gulp clean",
+    "clean:all": "gulp clean-all",
+    "cpd": "jscpd src -r console,html,xml -o ./reports/cpd",
+    "lint": "eslint src __tests__",
+    "test": "jest --colors"
   },
   "dependencies": {
-    "codacy-coverage": "^2.1.0",
-    "lodash": "4.17.4",
-    "request": "2.83.0"
+    "@hapi/joi": "^17.1.1",
+    "axios": "^0.19.2",
+    "lodash": "^4.17.15",
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
-    "istanbul": "0.4.5",
-    "jasmine": "2.8.0",
-    "jasmine-console-reporter": "2.0.1",
-    "jsdoc": "^3.5.5",
-    "jsdoc-to-markdown": "^3.0.3",
-    "jsdock": "^1.0.4",
-    "proxyquire": "1.8.0"
-  },
-  "directories": {
-    "lib": "lib"
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@types/jest": "^25.1.4",
+    "del": "^5.1.0",
+    "eslint": "^6.8.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-json-editor": "^2.5.4",
+    "jest": "^25.1.0",
+    "jest-junit": "^10.0.0",
+    "jscpd": "^3.1.0",
+    "jsdoc": "^3.6.3",
+    "jsdock": "^1.0.4"
   },
   "publishConfig": {
     "access": "public"
