--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "clean:all": "gulp clean-all",
     "cpd": "jscpd src -r console,html,xml -o ./reports/cpd",
     "lint": "eslint src __tests__",
-    "test": "jest --colors"
+    "test": "jest --colors",
+    "test:integration": "jest --colors --config=jest.config-integration.js",
+    "trello": "node __integration_tests__/trello-simulator/index.js",
+    "trello:watch": "gulp trello-watch"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -34,16 +37,20 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@types/jest": "^25.1.4",
+    "bson": "^4.0.3",
     "del": "^5.1.0",
     "eslint": "^6.8.0",
+    "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-json-editor": "^2.5.4",
+    "gulp-nodemon": "^2.5.0",
     "jest": "^25.1.0",
     "jest-junit": "^10.0.0",
     "jscpd": "^3.1.0",
     "jsdoc": "^3.6.3",
-    "jsdock": "^1.0.4"
+    "jsdock": "^1.0.4",
+    "lokijs": "^1.5.8"
   },
   "publishConfig": {
     "access": "public"
