Refactoring code structure

--- a/.babelrc
+++ b/.babelrc
@@ -10,9 +10,7 @@
           "firefox":"68",
           "ie": "11",
           "ios": "12.2",
-          "node": "10",
-          "opera": "63",
-          "safari": "12.1"
+          "node": "10"
         }
       }
     ]
