--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,46 @@
     "no-extend-native": "error",
     "no-floating-decimal": "error",
     "no-implicit-coercion": "error",
+    "no-implied-eval": "error",
+    "no-iterator": "error",
+    "no-labels": "error",
+    "no-lone-blocks": "error",
+    "no-loop-func": "error",
+    "no-magic-numbers": "warn",
+    "no-multi-spaces": "error",
+    "no-multi-str": "error",
+    "no-new": "warn",
+    "no-new-func": "warn",
+    "no-new-wrappers": "error",
+    "no-octal-escape": "error",
+    "no-param-reassign": ["warn", { "props": false }],
+    "no-proto": "error",
+    "no-return-assign": "warn",
+    "no-return-await": "error",
+    "no-script-url": "error",
+    "no-self-compare": "warn",
+    "no-sequences": "warn",
+    "no-throw-literal": "error",
+    "no-unmodified-loop-condition": "warn",
+    "no-unused-expressions": "warn",
+    "no-useless-call": "warn",
+    "no-useless-concat": "error",
+    "no-useless-escape": "warn",
+    "no-useless-return": "error",
+    "no-void": "error",
+    "no-warning-comments": "warn",
+    "prefer-named-capture-group": "warn",
+    "prefer-promise-reject-errors": "warn",
+    "prefer-regex-literals": "warn",
+    "radix": ["error", "as-needed"],
+    "yoda": "error",
+
+    // Variables
+    "init-declarations": "error",
+    "no-shadow": "warn",
+    "no-undef-init": "warn",
+    "no-undefined": "error",
+    "no-use-before-define": ["error", { "functions": false }],
 
     // Stylistic Issues
     "indent": ["error", 2, {
@@ -35,7 +75,10 @@
     }],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
-    "space-in-parens": ["error", "never"]
+    "space-in-parens": ["error", "never"],
+
+    // ECMAScript 6
+    "arrow-body-style": ["error", "as-needed"]
   },
   "parserOptions": {
     "ecmaVersion": 2020,
@@ -48,6 +91,9 @@
       ],
       "env": {
         "jest": true
+      },
+      "rules": {
+        "no-undefined": "off"
       }
     },
     {
