--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bson": "^4.0.3",
     "del": "^5.1.0",
     "esdoc": "^1.1.0",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
