--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,7 @@
       "sourceMaps": false
     },
     "test": {
-      "plugins": ["@babel/plugin-transform-runtime"],
+      "plugins": ["@babel/plugin-transform-runtime"]
     }
   }
 }
