--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,7 +93,8 @@
         "jest": true
       },
       "rules": {
-        "no-undefined": "off"
+        "no-undefined": "off",
+        "no-magic-numbers": "off"
       }
     },
     {
