--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-env": "^7.8.7",
     "@types/jest": "^25.1.4",
     "bson": "^4.0.3",
+    "chance": "^1.1.4",
     "del": "^5.1.0",
     "esdoc": "^1.1.0",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
